# grub-wol

./: .gitignore  Cargo.toml  readme.md
client/: Cargo.toml
client/src/: main.rs  responder.rs  state.rs
proto/: Cargo.toml
proto/src/: common.rs  constant.rs  encode.rs  lib.rs  transfer.rs
proto/src/def/: host.rs  mod.rs  server.rs
proto/src/mock/: mod.rs
proto/src/proto/: common.rs
server/: .env  Cargo.toml
server/script/: debug  dummy
server/src/: lib.rs  main.rs
server/src/control/: machine.rs  mod.rs
server/src/control/bootgraph/: boot.rs
server/src/control/packet/: btree.rs  event.rs  hashvec.rs  mod.rs  packet.rs  wol.rs
server/src/db/: mod.rs
server/src/event/: event.rs  ignitor.rs  mod.rs
server/src/grub/: adaptor.rs  api.rs  machine.rs  mod.rs  serde.rs
server/src/grub/bootgraph/: b.rs  boot.rs  graph.rs  mod.rs
server/src/grub/machine/: machine.rs  state.rs
server/src/grub/packet/: event.rs  hashvec.rs  packet.rs  wol.rs
server/src/http/: compat.rs  mod.rs  server.rs  test.rs
server/src/machine/: bootgraph.rs  graph.rs  ios.rs  machine.rs  mod.rs  state.rs  wol.rs
server/src/machine/bootgraph/: boot.rs  graph.rs  mod.rs
server/src/machine/packet/: btree.rs  event.rs  mod.rs  packet.rs
server/src/packet/: btree.rs  event.rs  mod.rs  packet.rs
server/src/packet/event/: coll.rs  event.rs  ignitor.rs  mod.rs
server/src/test/: mod.rs  state.rs  transfer.rs
server/src/ulog/: mod.rs
server/src/web/: logic.rs  mod.rs  route.rs  state.rs
server/src/web/grub/: adaptor.rs  api.rs  machine.rs  mod.rs  serde.rs
server/src/web/grub/bootgraph/: boot.rs  graph.rs
server/src/web/grub/packet/: event.rs  mod.rs  p.rs  packet.rs  wol.rs
server/src/web/http/: compat.rs  mod.rs  server.rs  test.rs
server/src/web/http/test/: helloworld.html
server/src/web/static/: test.html
server/src/wol/: limiter.rs  mod.rs
server/static/: helloworld.html
src/: client.rs  constant.rs  event.rs  main.rs  server.rs  status.rs
src/event/: event.rs  mod.rs
src/proto/: common.rs  def.rs  mod.rs  status.rs
web/: .eslintrc.json  Cargo.toml  index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
web/src/: lib.rs  main-element.ts  main.rs
web/src/assets/: api.rs
web/src/component/: bread_crumb.ts  machine.ts  machine_list.ts  os_list.ts
web/src/pages/: panel.ts
website/: Cargo.toml  index.html
website/script/: serve.sh
website/src/: lib.rs  main.rs
website/src/route/: control.rs  login.rs  mod.rs
