# cargo-features=[]

[package]
name = "grub-wol-2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "proto","client","server"
]

[dependencies.server]
path = "./server"

[dependencies.client]
path = "./client"

[dependencies]
# if-addrs = "0.7"
# mdns-sd = "0.5.8"
