[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.proto]
path = "./../proto"

[dependencies]
env_logger = "0.10.0"
async-std = "1.12.0"
bincode = "1.3.3"
serde = "1.0.152"
async-trait = "0.1.64"
log = "0.4.17"
