[package]
name = "proto"
version = "0.1.0"
edition = "2021"

# [lib]
# crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smol = "1.2.5"
lazy_static = "1.4.0"
thiserror = "1.0.37"
nanoserde = { git = "https://github.com/Eason0729/nanoserde.git"}
