[package]
name = "proto"
version = "0.1.0"
edition = "2021"

# [lib]
# crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# smol = "1.2.5"
serde_repr = "0.1"
serde = { version = "1.0.152", features = ["derive"] }
bincode = "1.3.3"
lazy_static = "1.4.0"
thiserror = "1.0.37"
async-channel = "1.8.0"

[dependencies.async-std]
version = "1.12.0"
features = ["attributes"]