[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies.proto]
path = "./../proto"

[dependencies]
thiserror = "1.0.37"
serde_json = "1.0.91"
log = "0.4.17"
bincode = "1.3.3"
futures-lite = "1.12.0"
tide = "0.16.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.async-std]
version = "1.12.0"
features = ["attributes"]

[dependencies.indexmap]
version = "1.9.2"
features = ["serde"]


