[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies.proto]
path = "./../proto"

[dependencies.website]
path = "./../website"

[dependencies]
thiserror = "1.0.37"
log = "0.4.17"
bincode = "1.3.3"
futures-lite = "1.12.0"
simple_logger = "4.0.0"
rand = "0.8.5"
lazy_static = "1.4.0"
async-trait = "0.1.62"
tide = "0.16.0"

[dependencies.serde]
version = "1.0.152"
features = ["derive"]

[dependencies.indexmap]
version = "1.9.2"
features = ["serde-1"]

[dependencies.async-std]
version = "1.12.0"
features = ["attributes"]