[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.proto]
path = "./../proto"

[dependencies]
yew = { version="0.20", features=["csr"] }
bincode = "1.3.3"

[dependencies.serde]
version = "1.0.152"
features = ["derive"]